1998-04-29  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* activity.h: Include new protocols DefaultOrder, AutoDrop in
	CompoundAction.  Include new protocols ActionCreatingTo,
	ActionCreatingForEach in ActionCreating.  Include new protocols
	RelativeTime, RepeatInterval, ConcurrentGroupType, SingletonGroups
	in Schedule.  Include SynchronizationType and InternalTimeMultiplier
	in SwarmProcess. 
	Disable setTerminateAtEnd:, getTerminateAtEnd,
	setSynchronizedMode:, getSynchronizedMode, and getCurrentTimebase
	from ScheduleActivity protocol.
	Add documentation tags throughout.

1998-04-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Schedule.m (_activity_insertAction): Disable code that attempts
	to cope with changes from external schedules.

1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* activity.h: Constify argument to _activity_context_error.

	* XActivity.m (auditRunRequest): Constify request.  Reformat
	function.
	(_activity_context_error): Constify macroName. Reformat function.

1997-12-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* XActivity.m ([Activity_c -getTopLevelActivity]): Handle activities
	that don't have owners.

	* Schedule.m (_check_external_activity): Check to make sure
	that the schedule associated with non-current activity 
	is still within same activity hierarchy.
	Minor reformatting.

1997-11-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* XActivity.m ([Activity_c -_run_]): Do not advance to next action
	if immediateReturnFlag is set; return as holding.

	* Schedule.m ([Schedule_c -_activateUnderSwarm_:::]): Initialize
	mergeExternalAction (a merge action with configurable slots).
	(_schedule_external_activity): Add internal function for
	scheduling merges for one-shot actions.
	(_check_external_activity): Add internal function for detecting
	schedules that are outside the scope of the current activity.
	(_activity_insertAction): Call check for schedules changes to
	external activities.
